...
/// For UI testing settings are reset and special buttons are added
/// 
struct ContentView: View {
    @Environment(\.scenePhase) private var scenePhase
    
    @AppStorage("UITesting")  private var UITesting  = false
    @AppStorage("stopCursor") private var stopCursor = false
    @AppStorage("scrollPage") private var scrollPage = false
    @AppStorage("mouseSpeed") private var mouseSpeed = 5.0
    @State private var showMouseButton = UserDefaults.standard.array(forKey: "showMouseButton") as? [Bool] ?? [true, true, true]
    @State private var showSettings = false
    
    @Bindable var errAlert = ErrorAlert()
    @Bindable var networkStatus = NWStatus()
...
                MouseButtonsView(mouseAction: remoteAccess?.mouseAction,
                                 disable: scrollPage || !networkStatus.connected || networkStatus.interfaceDisabled,
                                 showMouseButton: showMouseButton)
                Spacer()
                // Only for UI tests add special buttons that help in testing
                if UITesting {
                    Button("UITestWifi") {
                        networkStatus.interfaceDisabled.toggle()
                    }
                    Button("UITestError") {
                        errAlert.message = "UITestError"
                        errAlert.error = true
                    }
                    Button("UITestPairing") {
                        pairingStatus.showCodeEntry = true
                    }
                }
            }
            .background(Color.blue.opacity(0.2))
            .toolbar {
                if !networkStatus.connected {
                    if networkStatus.interfaceDisabled {
                        Image(systemName: "wifi.exclamationmark.circle")
                            .foregroundStyle(.red)
                            .accessibilityLabel("Wifi disabled")
                            .accessibilityIdentifier("WifiDisabled")
                    } else {
                        Image(systemName: "wifi.circle")
                            .symbolEffect(.variableColor)
                            .accessibilityLabel("Trying to establish connection")
                            .accessibilityIdentifier("WifiEnabledConnecting")
                    }
                }
            
                Button(action: { showSettings = true }) {
                    Image(systemName: "gear")
                        .foregroundColor(Color.primary)
                }
                .accessibilityLabel("Settings")
                .accessibilityIdentifier("Settings")
            }
            .sheet(isPresented: $showSettings) {
                VStack {
                    SettingsView(
                        pairing: remoteAccess?.pairing,
...
                    Spacer()
                }.background(Color.blue.opacity(0.2))
            }
            .fullScreenCover(isPresented: $pairingStatus.showCodeEntry) {
                PairingView(pairing: remoteAccess?.pairing, pairingStatus: pairingStatus)
            }
            .alert("Error",
                   isPresented: $errAlert.error,
                   actions: {} ) {
                Text(errAlert.message)
            }
            .onAppear {
                if UITesting {
...
