...
                } maximumValueLabel: {
                    Image(systemName: "hare.fill")
                } onEditingChanged: { _ in
                    mouseAction?.setSpeed(mouseSpeed)
                    lgg.info("Mouse speed changed to \(mouseSpeed)")
                }
                .accessibilityIdentifier("SpeedSlider")
            }
            .padding()
            
            VStack {
                Image(systemName: "computermouse.fill").scaleEffect(2)
                Toggle(isOn: $showMouseButton[0]) {
...
                        Image(systemName: "rectangle.portrait.fill")
                        Image(systemName: "rectangle.portrait")
                        Image(systemName: "rectangle.portrait")
                    }
                }
                .accessibilityLabel("Show left mouse button")
                .accessibilityIdentifier("ShowLeftMouseButton")
                
                Toggle(isOn: $showMouseButton[1]) {
                    HStack(spacing: 0) {
                        Image(systemName: "rectangle.portrait")
                        Image(systemName: "rectangle.portrait.fill")
                        Image(systemName: "rectangle.portrait")
                    }
                }
                .accessibilityLabel("Show middle mouse button")
                .accessibilityIdentifier("ShowMiddleMouseButton")
                
                Toggle(isOn: $showMouseButton[2]) {
                    HStack(spacing: 0) {
                        Image(systemName: "rectangle.portrait")
                        Image(systemName: "rectangle.portrait")
                        Image(systemName: "rectangle.portrait.fill")
                    }
                }
                .accessibilityLabel("Show right mouse button")
                .accessibilityIdentifier("ShowRightMouseButton")
            }
            .tint(.blue)
            .padding()
            
            Image(systemName: "link").scaleEffect(2).overlay(content: {
                Image(systemName: "line.diagonal").scaleEffect(2.5).rotationEffect(.degrees(45))
            }).rotationEffect(.degrees(45))
            Button(action: {showPairingResetConfirmation = true}) {
                Text("Delete all paired devices").padding(8)
            }
            .buttonStyle(.borderedProminent)
            .padding()
            .confirmationDialog(
                "Are you sure you want to reset all pairings?",
                isPresented: $showPairingResetConfirmation,
                titleVisibility: .visible
            ) {
                Button("Reset Pairings", role: .destructive) {
                    pairing?.resetPairing()
                    showPairingResetDone = true
                    DispatchQueue.main.asyncAfter(deadline: .now() + 1.5) {
                        showPairingResetDone = false
                    }
                }
            }
            .padding(.bottom, 20)
            .overlay(alignment: .bottom) {
                if (showPairingResetDone) {
                    Text("Reset done")
                        .padding(4)
                        .padding(.horizontal)
                        .foregroundColor(Color.white)
                        .background(Color.secondary)
                        
                }
...
