...
                let frameheight = if (!showMouseButton[1] && !showMouseButton[2]) { 300.0 } else { 150.0 }
                ZStack {
                    RoundedRectangle(cornerRadius: 16.0)
                        .fill(tapL ? Color.blue.opacity(0.4) : Color.blue)
                        .frame(height: frameheight)
                        .accessibilityLabel("Left mouse button")
                        .accessibilityIdentifier("LeftMouseButton")
                    
                    HStack(spacing: 0) {
                        Image(systemName: "rectangle.portrait.fill")
                        Image(systemName: "rectangle.portrait")
                        Image(systemName: "rectangle.portrait")
                    }
...
                let scalefactor = if frameheight > 60.0 { 1.0 } else { 0.7 }
                ZStack {
                    RoundedRectangle(cornerRadius: 16.0)
                        .fill(tapM ? Color.blue.opacity(0.4) : Color.blue)
                        .frame(height: frameheight)
                        .accessibilityLabel("Middle mouse button")
                        .accessibilityIdentifier("MiddleMouseButton")
                    HStack(spacing: 0) {
                        Image(systemName: "rectangle.portrait")
                        Image(systemName: "rectangle.portrait.fill")
                        Image(systemName: "rectangle.portrait")
                    }.scaleEffect(scalefactor)
                }
...
                let frameheight = if (!showMouseButton[0] && !showMouseButton[1]) { 300.0 } else { 150.0 }
                ZStack {
                    RoundedRectangle(cornerRadius: 16.0)
                        .fill(tapR ? Color.blue.opacity(0.4) : Color.blue)
                        .frame(height: frameheight)
                        .accessibilityLabel("Right mouse button")
                        .accessibilityIdentifier("RightMouseButton")
                    HStack(spacing: 0) {
                        Image(systemName: "rectangle.portrait")
                        Image(systemName: "rectangle.portrait")
                        Image(systemName: "rectangle.portrait.fill")
                    }
                    
...
